--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -206,5 +206,108 @@
     "/final/solicitudes/index.html": "/final/solicitudes/index.html",
     "/final/solicitudes_caso/index.html": "/final/solicitudes_caso/index.html",
     "/final/suscribete/index.html": "/final/suscribete/index.html",
-    "/final/terminos/index.html": "/final/terminos/index.html"
+    "/final/terminos/index.html": "/final/terminos/index.html",
+    "/qa/assets/css/app.css": "/qa/assets/css/app.css",
+    "/qa/assets/css/app.min.css": "/qa/assets/css/app.min.css",
+    "/qa/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/qa/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
+    "/qa/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/qa/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
+    "/qa/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/qa/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
+    "/qa/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/qa/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
+    "/qa/assets/documentos/Estatutos-sociales-Asulado.pdf": "/qa/assets/documentos/Estatutos-sociales-Asulado.pdf",
+    "/qa/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/qa/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
+    "/qa/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/qa/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
+    "/qa/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/qa/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
+    "/qa/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/qa/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/qa/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf": "/qa/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf",
+    "/qa/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf": "/qa/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf",
+    "/qa/assets/fonts/0a5eb17cd5d9a87b-s.p.woff": "/qa/assets/fonts/0a5eb17cd5d9a87b-s.p.woff",
+    "/qa/assets/fonts/33112a1a3babe854-s.p.woff": "/qa/assets/fonts/33112a1a3babe854-s.p.woff",
+    "/qa/assets/fonts/60964256366d74f2-s.p.woff": "/qa/assets/fonts/60964256366d74f2-s.p.woff",
+    "/qa/assets/fonts/7d16627dbfbbee5d-s.p.woff": "/qa/assets/fonts/7d16627dbfbbee5d-s.p.woff",
+    "/qa/assets/fonts/87cbde00c95e8478-s.p.woff": "/qa/assets/fonts/87cbde00c95e8478-s.p.woff",
+    "/qa/assets/fonts/ce9abbd2222b7882-s.p.woff": "/qa/assets/fonts/ce9abbd2222b7882-s.p.woff",
+    "/qa/assets/fonts/e86cc954d8c82a89-s.p.woff": "/qa/assets/fonts/e86cc954d8c82a89-s.p.woff",
+    "/qa/assets/fonts/ee0063ed4c3236ca-s.p.woff": "/qa/assets/fonts/ee0063ed4c3236ca-s.p.woff",
+    "/qa/assets/images/ILUS1.webp": "/qa/assets/images/ILUS1.webp",
+    "/qa/assets/images/ILUS2.webp": "/qa/assets/images/ILUS2.webp",
+    "/qa/assets/images/ILUS3.webp": "/qa/assets/images/ILUS3.webp",
+    "/qa/assets/images/TOP/top_solicitudes.png": "/qa/assets/images/TOP/top_solicitudes.png",
+    "/qa/assets/images/asu-favicon-alt.png": "/qa/assets/images/asu-favicon-alt.png",
+    "/qa/assets/images/banner_home.png": "/qa/assets/images/banner_home.png",
+    "/qa/assets/images/banner_home.webp": "/qa/assets/images/banner_home.webp",
+    "/qa/assets/images/blog/blog_1.jpg": "/qa/assets/images/blog/blog_1.jpg",
+    "/qa/assets/images/blog/blog_1.webp": "/qa/assets/images/blog/blog_1.webp",
+    "/qa/assets/images/blog/blog_2.jpg": "/qa/assets/images/blog/blog_2.jpg",
+    "/qa/assets/images/blog/blog_2.webp": "/qa/assets/images/blog/blog_2.webp",
+    "/qa/assets/images/blog/blog_3.jpg": "/qa/assets/images/blog/blog_3.jpg",
+    "/qa/assets/images/blog/blog_3.webp": "/qa/assets/images/blog/blog_3.webp",
+    "/qa/assets/images/blog/blog_4.jpg": "/qa/assets/images/blog/blog_4.jpg",
+    "/qa/assets/images/blog/blog_4.webp": "/qa/assets/images/blog/blog_4.webp",
+    "/qa/assets/images/fb.png": "/qa/assets/images/fb.png",
+    "/qa/assets/images/header_logo.svg": "/qa/assets/images/header_logo.svg",
+    "/qa/assets/images/home_elements.svg": "/qa/assets/images/home_elements.svg",
+    "/qa/assets/images/img_anciana.webp": "/qa/assets/images/img_anciana.webp",
+    "/qa/assets/images/img_atencion_1.png": "/qa/assets/images/img_atencion_1.png",
+    "/qa/assets/images/img_atencion_2.png": "/qa/assets/images/img_atencion_2.png",
+    "/qa/assets/images/img_call_center.webp": "/qa/assets/images/img_call_center.webp",
+    "/qa/assets/images/img_gestion.png": "/qa/assets/images/img_gestion.png",
+    "/qa/assets/images/img_gestion.webp": "/qa/assets/images/img_gestion.webp",
+    "/qa/assets/images/img_gestion2.webp": "/qa/assets/images/img_gestion2.webp",
+    "/qa/assets/images/img_ilus_renta_inv.webp": "/qa/assets/images/img_ilus_renta_inv.webp",
+    "/qa/assets/images/img_ilus_renta_sob.webp": "/qa/assets/images/img_ilus_renta_sob.webp",
+    "/qa/assets/images/img_nino.webp": "/qa/assets/images/img_nino.webp",
+    "/qa/assets/images/img_novedades_1.png": "/qa/assets/images/img_novedades_1.png",
+    "/qa/assets/images/img_novedades_1.webp": "/qa/assets/images/img_novedades_1.webp",
+    "/qa/assets/images/img_novedades_2.png": "/qa/assets/images/img_novedades_2.png",
+    "/qa/assets/images/img_novedades_2.webp": "/qa/assets/images/img_novedades_2.webp",
+    "/qa/assets/images/img_novedades_3.png": "/qa/assets/images/img_novedades_3.png",
+    "/qa/assets/images/img_novedades_3.webp": "/qa/assets/images/img_novedades_3.webp",
+    "/qa/assets/images/img_proposito.png": "/qa/assets/images/img_proposito.png",
+    "/qa/assets/images/img_proposito.webp": "/qa/assets/images/img_proposito.webp",
+    "/qa/assets/images/img_renta.png": "/qa/assets/images/img_renta.png",
+    "/qa/assets/images/img_seguro.png": "/qa/assets/images/img_seguro.png",
+    "/qa/assets/images/img_sp_auxilio.webp": "/qa/assets/images/img_sp_auxilio.webp",
+    "/qa/assets/images/img_sp_incapacidad.webp": "/qa/assets/images/img_sp_incapacidad.webp",
+    "/qa/assets/images/mano_paraque.png": "/qa/assets/images/mano_paraque.png",
+    "/qa/assets/images/mano_paraque.webp": "/qa/assets/images/mano_paraque.webp",
+    "/qa/assets/images/mano_porque.png": "/qa/assets/images/mano_porque.png",
+    "/qa/assets/images/mano_porque.webp": "/qa/assets/images/mano_porque.webp",
+    "/qa/assets/images/novedades.png": "/qa/assets/images/novedades.png",
+    "/qa/assets/images/quees_renta_vitalicia.png": "/qa/assets/images/quees_renta_vitalicia.png",
+    "/qa/assets/images/quees_renta_vitalicia.webp": "/qa/assets/images/quees_renta_vitalicia.webp",
+    "/qa/assets/images/quees_seguro_revisional.webp": "/qa/assets/images/quees_seguro_revisional.webp",
+    "/qa/assets/images/svg_anciana.svg": "/qa/assets/images/svg_anciana.svg",
+    "/qa/assets/images/svg_nino_cuerpo.svg": "/qa/assets/images/svg_nino_cuerpo.svg",
+    "/qa/assets/images/svg_nino_mano.svg": "/qa/assets/images/svg_nino_mano.svg",
+    "/qa/assets/images/svg_nino_mano.webp": "/qa/assets/images/svg_nino_mano.webp",
+    "/qa/assets/images/top_gestion_documentos.webp": "/qa/assets/images/top_gestion_documentos.webp",
+    "/qa/assets/images/top_nuestra_empresa.png": "/qa/assets/images/top_nuestra_empresa.png",
+    "/qa/assets/images/top_nuestra_empresa.webp": "/qa/assets/images/top_nuestra_empresa.webp",
+    "/qa/assets/images/top_preguntas_frecuentes.webp": "/qa/assets/images/top_preguntas_frecuentes.webp",
+    "/qa/assets/images/top_renta_vitalicia.webp": "/qa/assets/images/top_renta_vitalicia.webp",
+    "/qa/assets/images/top_rv_pension_invalidez.webp": "/qa/assets/images/top_rv_pension_invalidez.webp",
+    "/qa/assets/images/top_rv_pension_sobreviviencia.webp": "/qa/assets/images/top_rv_pension_sobreviviencia.webp",
+    "/qa/assets/images/top_seguro_previsional.png": "/qa/assets/images/top_seguro_previsional.png",
+    "/qa/assets/images/top_seguro_previsional.webp": "/qa/assets/images/top_seguro_previsional.webp",
+    "/qa/assets/images/top_solicitudes.webp": "/qa/assets/images/top_solicitudes.webp",
+    "/qa/assets/images/top_suscribete.webp": "/qa/assets/images/top_suscribete.webp",
+    "/qa/assets/images/vigilado.png": "/qa/assets/images/vigilado.png",
+    "/qa/assets/images/vigilado_vert.png": "/qa/assets/images/vigilado_vert.png",
+    "/qa/assets/js/app.js": "/qa/assets/js/app.js",
+    "/qa/assets/js/app.js.LICENSE.txt": "/qa/assets/js/app.js.LICENSE.txt",
+    "/qa/assets/js/app.min.js": "/qa/assets/js/app.min.js",
+    "/qa/consumidor_financiero/index.html": "/qa/consumidor_financiero/index.html",
+    "/qa/favicon.ico": "/qa/favicon.ico",
+    "/qa/gestion_documentos/index.html": "/qa/gestion_documentos/index.html",
+    "/qa/index.html": "/qa/index.html",
+    "/qa/nuestra_empresa/index.html": "/qa/nuestra_empresa/index.html",
+    "/qa/pension_invalidez/index.html": "/qa/pension_invalidez/index.html",
+    "/qa/pension_sobreviviencia/index.html": "/qa/pension_sobreviviencia/index.html",
+    "/qa/preguntas_frecuentes/index.html": "/qa/preguntas_frecuentes/index.html",
+    "/qa/renta_vitalicia/index.html": "/qa/renta_vitalicia/index.html",
+    "/qa/seguro_previsional/index.html": "/qa/seguro_previsional/index.html",
+    "/qa/solicitudes/index.html": "/qa/solicitudes/index.html",
+    "/qa/solicitudes_caso/index.html": "/qa/solicitudes_caso/index.html",
+    "/qa/suscribete/index.html": "/qa/suscribete/index.html",
+    "/qa/terminos/index.html": "/qa/terminos/index.html"
 }
