ajuste de imagen en sv de documentos

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -27,6 +27,7 @@
     "/prod/assets/images/ILUS3.webp": "/prod/assets/images/ILUS3.webp",
     "/prod/assets/images/TOP/top_solicitudes.png": "/prod/assets/images/TOP/top_solicitudes.png",
     "/prod/assets/images/asu-favicon-alt.png": "/prod/assets/images/asu-favicon-alt.png",
+    "/prod/assets/images/ayuda.webp": "/prod/assets/images/ayuda.webp",
     "/prod/assets/images/banner_home.png": "/prod/assets/images/banner_home.png",
     "/prod/assets/images/banner_home.webp": "/prod/assets/images/banner_home.webp",
     "/prod/assets/images/blog/blog_1.jpg": "/prod/assets/images/blog/blog_1.jpg",
@@ -130,6 +131,7 @@
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
     "/final/assets/images/TOP/top_solicitudes.png": "/final/assets/images/TOP/top_solicitudes.png",
     "/final/assets/images/asu-favicon-alt.png": "/final/assets/images/asu-favicon-alt.png",
+    "/final/assets/images/ayuda.webp": "/final/assets/images/ayuda.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
     "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
     "/final/assets/images/blog/blog_1.jpg": "/final/assets/images/blog/blog_1.jpg",
@@ -233,6 +235,7 @@
     "/qa/assets/images/ILUS3.webp": "/qa/assets/images/ILUS3.webp",
     "/qa/assets/images/TOP/top_solicitudes.png": "/qa/assets/images/TOP/top_solicitudes.png",
     "/qa/assets/images/asu-favicon-alt.png": "/qa/assets/images/asu-favicon-alt.png",
+    "/qa/assets/images/ayuda.webp": "/qa/assets/images/ayuda.webp",
     "/qa/assets/images/banner_home.png": "/qa/assets/images/banner_home.png",
     "/qa/assets/images/banner_home.webp": "/qa/assets/images/banner_home.webp",
     "/qa/assets/images/blog/blog_1.jpg": "/qa/assets/images/blog/blog_1.jpg",
