ajustes en assets footer

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -80,6 +80,7 @@
     "/prod/assets/images/top_nuestra_empresa.webp": "/prod/assets/images/top_nuestra_empresa.webp",
     "/prod/assets/images/top_preguntas_frecuentes.webp": "/prod/assets/images/top_preguntas_frecuentes.webp",
     "/prod/assets/images/top_renta_vitalicia.webp": "/prod/assets/images/top_renta_vitalicia.webp",
+    "/prod/assets/images/top_rv_pension_invalidez.png": "/prod/assets/images/top_rv_pension_invalidez.png",
     "/prod/assets/images/top_rv_pension_invalidez.webp": "/prod/assets/images/top_rv_pension_invalidez.webp",
     "/prod/assets/images/top_rv_pension_sobreviviencia.webp": "/prod/assets/images/top_rv_pension_sobreviviencia.webp",
     "/prod/assets/images/top_seguro_previsional.png": "/prod/assets/images/top_seguro_previsional.png",
@@ -184,6 +185,7 @@
     "/final/assets/images/top_nuestra_empresa.webp": "/final/assets/images/top_nuestra_empresa.webp",
     "/final/assets/images/top_preguntas_frecuentes.webp": "/final/assets/images/top_preguntas_frecuentes.webp",
     "/final/assets/images/top_renta_vitalicia.webp": "/final/assets/images/top_renta_vitalicia.webp",
+    "/final/assets/images/top_rv_pension_invalidez.png": "/final/assets/images/top_rv_pension_invalidez.png",
     "/final/assets/images/top_rv_pension_invalidez.webp": "/final/assets/images/top_rv_pension_invalidez.webp",
     "/final/assets/images/top_rv_pension_sobreviviencia.webp": "/final/assets/images/top_rv_pension_sobreviviencia.webp",
     "/final/assets/images/top_seguro_previsional.png": "/final/assets/images/top_seguro_previsional.png",
@@ -288,6 +290,7 @@
     "/qa/assets/images/top_nuestra_empresa.webp": "/qa/assets/images/top_nuestra_empresa.webp",
     "/qa/assets/images/top_preguntas_frecuentes.webp": "/qa/assets/images/top_preguntas_frecuentes.webp",
     "/qa/assets/images/top_renta_vitalicia.webp": "/qa/assets/images/top_renta_vitalicia.webp",
+    "/qa/assets/images/top_rv_pension_invalidez.png": "/qa/assets/images/top_rv_pension_invalidez.png",
     "/qa/assets/images/top_rv_pension_invalidez.webp": "/qa/assets/images/top_rv_pension_invalidez.webp",
     "/qa/assets/images/top_rv_pension_sobreviviencia.webp": "/qa/assets/images/top_rv_pension_sobreviviencia.webp",
     "/qa/assets/images/top_seguro_previsional.png": "/qa/assets/images/top_seguro_previsional.png",
