Ajustes de imagenes, consumidor financiero, solic

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -25,7 +25,6 @@
     "/prod/assets/images/ILUS1.webp": "/prod/assets/images/ILUS1.webp",
     "/prod/assets/images/ILUS2.webp": "/prod/assets/images/ILUS2.webp",
     "/prod/assets/images/ILUS3.webp": "/prod/assets/images/ILUS3.webp",
-    "/prod/assets/images/TOP/top_solicitudes.png": "/prod/assets/images/TOP/top_solicitudes.png",
     "/prod/assets/images/asu-favicon-alt.png": "/prod/assets/images/asu-favicon-alt.png",
     "/prod/assets/images/ayuda.webp": "/prod/assets/images/ayuda.webp",
     "/prod/assets/images/banner_home.png": "/prod/assets/images/banner_home.png",
@@ -38,6 +37,7 @@
     "/prod/assets/images/blog/blog_3.webp": "/prod/assets/images/blog/blog_3.webp",
     "/prod/assets/images/blog/blog_4.jpg": "/prod/assets/images/blog/blog_4.jpg",
     "/prod/assets/images/blog/blog_4.webp": "/prod/assets/images/blog/blog_4.webp",
+    "/prod/assets/images/fase.png": "/prod/assets/images/fase.png",
     "/prod/assets/images/fb.png": "/prod/assets/images/fb.png",
     "/prod/assets/images/header_logo.svg": "/prod/assets/images/header_logo.svg",
     "/prod/assets/images/home_elements.svg": "/prod/assets/images/home_elements.svg",
@@ -71,11 +71,13 @@
     "/prod/assets/images/quees_renta_vitalicia.png": "/prod/assets/images/quees_renta_vitalicia.png",
     "/prod/assets/images/quees_renta_vitalicia.webp": "/prod/assets/images/quees_renta_vitalicia.webp",
     "/prod/assets/images/quees_seguro_revisional.webp": "/prod/assets/images/quees_seguro_revisional.webp",
+    "/prod/assets/images/super.png": "/prod/assets/images/super.png",
     "/prod/assets/images/svg_anciana.svg": "/prod/assets/images/svg_anciana.svg",
     "/prod/assets/images/svg_nino_cuerpo.svg": "/prod/assets/images/svg_nino_cuerpo.svg",
     "/prod/assets/images/svg_nino_mano.svg": "/prod/assets/images/svg_nino_mano.svg",
     "/prod/assets/images/svg_nino_mano.webp": "/prod/assets/images/svg_nino_mano.webp",
     "/prod/assets/images/top_gestion_documentos.webp": "/prod/assets/images/top_gestion_documentos.webp",
+    "/prod/assets/images/top_gobierno.webp": "/prod/assets/images/top_gobierno.webp",
     "/prod/assets/images/top_nuestra_empresa.png": "/prod/assets/images/top_nuestra_empresa.png",
     "/prod/assets/images/top_nuestra_empresa.webp": "/prod/assets/images/top_nuestra_empresa.webp",
     "/prod/assets/images/top_preguntas_frecuentes.webp": "/prod/assets/images/top_preguntas_frecuentes.webp",
@@ -95,6 +97,8 @@
     "/prod/consumidor_financiero/index.html": "/prod/consumidor_financiero/index.html",
     "/prod/favicon.ico": "/prod/favicon.ico",
     "/prod/gestion_documentos/index.html": "/prod/gestion_documentos/index.html",
+    "/prod/gobierno_corporativo/1_ppios.html": "/prod/gobierno_corporativo/1_ppios.html",
+    "/prod/gobierno_corporativo/index.html": "/prod/gobierno_corporativo/index.html",
     "/prod/index.html": "/prod/index.html",
     "/prod/nuestra_empresa/index.html": "/prod/nuestra_empresa/index.html",
     "/prod/pension_invalidez/index.html": "/prod/pension_invalidez/index.html",
@@ -130,7 +134,6 @@
     "/final/assets/images/ILUS1.webp": "/final/assets/images/ILUS1.webp",
     "/final/assets/images/ILUS2.webp": "/final/assets/images/ILUS2.webp",
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
-    "/final/assets/images/TOP/top_solicitudes.png": "/final/assets/images/TOP/top_solicitudes.png",
     "/final/assets/images/asu-favicon-alt.png": "/final/assets/images/asu-favicon-alt.png",
     "/final/assets/images/ayuda.webp": "/final/assets/images/ayuda.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
@@ -143,6 +146,7 @@
     "/final/assets/images/blog/blog_3.webp": "/final/assets/images/blog/blog_3.webp",
     "/final/assets/images/blog/blog_4.jpg": "/final/assets/images/blog/blog_4.jpg",
     "/final/assets/images/blog/blog_4.webp": "/final/assets/images/blog/blog_4.webp",
+    "/final/assets/images/fase.png": "/final/assets/images/fase.png",
     "/final/assets/images/fb.png": "/final/assets/images/fb.png",
     "/final/assets/images/header_logo.svg": "/final/assets/images/header_logo.svg",
     "/final/assets/images/home_elements.svg": "/final/assets/images/home_elements.svg",
@@ -176,11 +180,13 @@
     "/final/assets/images/quees_renta_vitalicia.png": "/final/assets/images/quees_renta_vitalicia.png",
     "/final/assets/images/quees_renta_vitalicia.webp": "/final/assets/images/quees_renta_vitalicia.webp",
     "/final/assets/images/quees_seguro_revisional.webp": "/final/assets/images/quees_seguro_revisional.webp",
+    "/final/assets/images/super.png": "/final/assets/images/super.png",
     "/final/assets/images/svg_anciana.svg": "/final/assets/images/svg_anciana.svg",
     "/final/assets/images/svg_nino_cuerpo.svg": "/final/assets/images/svg_nino_cuerpo.svg",
     "/final/assets/images/svg_nino_mano.svg": "/final/assets/images/svg_nino_mano.svg",
     "/final/assets/images/svg_nino_mano.webp": "/final/assets/images/svg_nino_mano.webp",
     "/final/assets/images/top_gestion_documentos.webp": "/final/assets/images/top_gestion_documentos.webp",
+    "/final/assets/images/top_gobierno.webp": "/final/assets/images/top_gobierno.webp",
     "/final/assets/images/top_nuestra_empresa.png": "/final/assets/images/top_nuestra_empresa.png",
     "/final/assets/images/top_nuestra_empresa.webp": "/final/assets/images/top_nuestra_empresa.webp",
     "/final/assets/images/top_preguntas_frecuentes.webp": "/final/assets/images/top_preguntas_frecuentes.webp",
@@ -200,6 +206,8 @@
     "/final/consumidor_financiero/index.html": "/final/consumidor_financiero/index.html",
     "/final/favicon.ico": "/final/favicon.ico",
     "/final/gestion_documentos/index.html": "/final/gestion_documentos/index.html",
+    "/final/gobierno_corporativo/1_ppios.html": "/final/gobierno_corporativo/1_ppios.html",
+    "/final/gobierno_corporativo/index.html": "/final/gobierno_corporativo/index.html",
     "/final/index.html": "/final/index.html",
     "/final/nuestra_empresa/index.html": "/final/nuestra_empresa/index.html",
     "/final/pension_invalidez/index.html": "/final/pension_invalidez/index.html",
@@ -235,7 +243,6 @@
     "/qa/assets/images/ILUS1.webp": "/qa/assets/images/ILUS1.webp",
     "/qa/assets/images/ILUS2.webp": "/qa/assets/images/ILUS2.webp",
     "/qa/assets/images/ILUS3.webp": "/qa/assets/images/ILUS3.webp",
-    "/qa/assets/images/TOP/top_solicitudes.png": "/qa/assets/images/TOP/top_solicitudes.png",
     "/qa/assets/images/asu-favicon-alt.png": "/qa/assets/images/asu-favicon-alt.png",
     "/qa/assets/images/ayuda.webp": "/qa/assets/images/ayuda.webp",
     "/qa/assets/images/banner_home.png": "/qa/assets/images/banner_home.png",
@@ -248,6 +255,7 @@
     "/qa/assets/images/blog/blog_3.webp": "/qa/assets/images/blog/blog_3.webp",
     "/qa/assets/images/blog/blog_4.jpg": "/qa/assets/images/blog/blog_4.jpg",
     "/qa/assets/images/blog/blog_4.webp": "/qa/assets/images/blog/blog_4.webp",
+    "/qa/assets/images/fase.png": "/qa/assets/images/fase.png",
     "/qa/assets/images/fb.png": "/qa/assets/images/fb.png",
     "/qa/assets/images/header_logo.svg": "/qa/assets/images/header_logo.svg",
     "/qa/assets/images/home_elements.svg": "/qa/assets/images/home_elements.svg",
@@ -281,11 +289,13 @@
     "/qa/assets/images/quees_renta_vitalicia.png": "/qa/assets/images/quees_renta_vitalicia.png",
     "/qa/assets/images/quees_renta_vitalicia.webp": "/qa/assets/images/quees_renta_vitalicia.webp",
     "/qa/assets/images/quees_seguro_revisional.webp": "/qa/assets/images/quees_seguro_revisional.webp",
+    "/qa/assets/images/super.png": "/qa/assets/images/super.png",
     "/qa/assets/images/svg_anciana.svg": "/qa/assets/images/svg_anciana.svg",
     "/qa/assets/images/svg_nino_cuerpo.svg": "/qa/assets/images/svg_nino_cuerpo.svg",
     "/qa/assets/images/svg_nino_mano.svg": "/qa/assets/images/svg_nino_mano.svg",
     "/qa/assets/images/svg_nino_mano.webp": "/qa/assets/images/svg_nino_mano.webp",
     "/qa/assets/images/top_gestion_documentos.webp": "/qa/assets/images/top_gestion_documentos.webp",
+    "/qa/assets/images/top_gobierno.webp": "/qa/assets/images/top_gobierno.webp",
     "/qa/assets/images/top_nuestra_empresa.png": "/qa/assets/images/top_nuestra_empresa.png",
     "/qa/assets/images/top_nuestra_empresa.webp": "/qa/assets/images/top_nuestra_empresa.webp",
     "/qa/assets/images/top_preguntas_frecuentes.webp": "/qa/assets/images/top_preguntas_frecuentes.webp",
@@ -305,6 +315,8 @@
     "/qa/consumidor_financiero/index.html": "/qa/consumidor_financiero/index.html",
     "/qa/favicon.ico": "/qa/favicon.ico",
     "/qa/gestion_documentos/index.html": "/qa/gestion_documentos/index.html",
+    "/qa/gobierno_corporativo/1_ppios.html": "/qa/gobierno_corporativo/1_ppios.html",
+    "/qa/gobierno_corporativo/index.html": "/qa/gobierno_corporativo/index.html",
     "/qa/index.html": "/qa/index.html",
     "/qa/nuestra_empresa/index.html": "/qa/nuestra_empresa/index.html",
     "/qa/pension_invalidez/index.html": "/qa/pension_invalidez/index.html",
