ajustes textos generales del sitio web

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -7,6 +7,7 @@
     "/prod/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/prod/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
     "/prod/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/prod/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
     "/prod/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/prod/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
+    "/prod/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/prod/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
     "/prod/assets/documentos/Estatutos-sociales-Asulado.pdf": "/prod/assets/documentos/Estatutos-sociales-Asulado.pdf",
     "/prod/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/prod/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/prod/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/prod/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
@@ -116,6 +117,7 @@
     "/final/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/final/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
     "/final/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/final/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
     "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
+    "/final/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/final/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
     "/final/assets/documentos/Estatutos-sociales-Asulado.pdf": "/final/assets/documentos/Estatutos-sociales-Asulado.pdf",
     "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
@@ -225,6 +227,7 @@
     "/qa/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/qa/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
     "/qa/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/qa/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
     "/qa/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/qa/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
+    "/qa/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/qa/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
     "/qa/assets/documentos/Estatutos-sociales-Asulado.pdf": "/qa/assets/documentos/Estatutos-sociales-Asulado.pdf",
     "/qa/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/qa/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/qa/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/qa/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
