--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -27,6 +27,7 @@
     "/prod/assets/images/ILUS2.webp": "/prod/assets/images/ILUS2.webp",
     "/prod/assets/images/ILUS3.webp": "/prod/assets/images/ILUS3.webp",
     "/prod/assets/images/asu-favicon-alt.png": "/prod/assets/images/asu-favicon-alt.png",
+    "/prod/assets/images/asulado_disc.png": "/prod/assets/images/asulado_disc.png",
     "/prod/assets/images/ayuda.webp": "/prod/assets/images/ayuda.webp",
     "/prod/assets/images/banner_home.png": "/prod/assets/images/banner_home.png",
     "/prod/assets/images/banner_home.webp": "/prod/assets/images/banner_home.webp",
@@ -137,6 +138,7 @@
     "/final/assets/images/ILUS2.webp": "/final/assets/images/ILUS2.webp",
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
     "/final/assets/images/asu-favicon-alt.png": "/final/assets/images/asu-favicon-alt.png",
+    "/final/assets/images/asulado_disc.png": "/final/assets/images/asulado_disc.png",
     "/final/assets/images/ayuda.webp": "/final/assets/images/ayuda.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
     "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
@@ -247,6 +249,7 @@
     "/qa/assets/images/ILUS2.webp": "/qa/assets/images/ILUS2.webp",
     "/qa/assets/images/ILUS3.webp": "/qa/assets/images/ILUS3.webp",
     "/qa/assets/images/asu-favicon-alt.png": "/qa/assets/images/asu-favicon-alt.png",
+    "/qa/assets/images/asulado_disc.png": "/qa/assets/images/asulado_disc.png",
     "/qa/assets/images/ayuda.webp": "/qa/assets/images/ayuda.webp",
     "/qa/assets/images/banner_home.png": "/qa/assets/images/banner_home.png",
     "/qa/assets/images/banner_home.webp": "/qa/assets/images/banner_home.webp",
