ajustes header gobierno

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -26,6 +26,18 @@
     "/prod/assets/images/ILUS1.webp": "/prod/assets/images/ILUS1.webp",
     "/prod/assets/images/ILUS2.webp": "/prod/assets/images/ILUS2.webp",
     "/prod/assets/images/ILUS3.webp": "/prod/assets/images/ILUS3.webp",
+    "/prod/assets/images/accionistas.png": "/prod/assets/images/accionistas.png",
+    "/prod/assets/images/accionistas1.png": "/prod/assets/images/accionistas1.png",
+    "/prod/assets/images/accionistas2.png": "/prod/assets/images/accionistas2.png",
+    "/prod/assets/images/altag/Alejandra Osorio.png": "/prod/assets/images/altag/Alejandra Osorio.png",
+    "/prod/assets/images/altag/Diana Ramírez.png": "/prod/assets/images/altag/Diana Ramírez.png",
+    "/prod/assets/images/altag/Gustavo Farrera.png": "/prod/assets/images/altag/Gustavo Farrera.png",
+    "/prod/assets/images/altag/Johana Lizarazo.png": "/prod/assets/images/altag/Johana Lizarazo.png",
+    "/prod/assets/images/altag/Julián Jaramillo.png": "/prod/assets/images/altag/Julián Jaramillo.png",
+    "/prod/assets/images/altag/Liliana Ríos .png": "/prod/assets/images/altag/Liliana Ríos .png",
+    "/prod/assets/images/altag/Mauricio Hernández.png": "/prod/assets/images/altag/Mauricio Hernández.png",
+    "/prod/assets/images/altag/Patricia Restrepo .png": "/prod/assets/images/altag/Patricia Restrepo .png",
+    "/prod/assets/images/altag/Sebastián Mejía.png": "/prod/assets/images/altag/Sebastián Mejía.png",
     "/prod/assets/images/asu-favicon-alt.png": "/prod/assets/images/asu-favicon-alt.png",
     "/prod/assets/images/asulado_disc.png": "/prod/assets/images/asulado_disc.png",
     "/prod/assets/images/ayuda.webp": "/prod/assets/images/ayuda.webp",
@@ -65,6 +77,14 @@
     "/prod/assets/images/img_seguro.png": "/prod/assets/images/img_seguro.png",
     "/prod/assets/images/img_sp_auxilio.webp": "/prod/assets/images/img_sp_auxilio.webp",
     "/prod/assets/images/img_sp_incapacidad.webp": "/prod/assets/images/img_sp_incapacidad.webp",
+    "/prod/assets/images/junta/junta-andres.png": "/prod/assets/images/junta/junta-andres.png",
+    "/prod/assets/images/junta/junta-catalina.png": "/prod/assets/images/junta/junta-catalina.png",
+    "/prod/assets/images/junta/junta-sebastian.png": "/prod/assets/images/junta/junta-sebastian.png",
+    "/prod/assets/images/junta/junta-stella.png": "/prod/assets/images/junta/junta-stella.png",
+    "/prod/assets/images/junta/junta-tatiana.png": "/prod/assets/images/junta/junta-tatiana.png",
+    "/prod/assets/images/logo_col.png": "/prod/assets/images/logo_col.png",
+    "/prod/assets/images/logo_corner.png": "/prod/assets/images/logo_corner.png",
+    "/prod/assets/images/logo_sura.png": "/prod/assets/images/logo_sura.png",
     "/prod/assets/images/mano_paraque.png": "/prod/assets/images/mano_paraque.png",
     "/prod/assets/images/mano_paraque.webp": "/prod/assets/images/mano_paraque.webp",
     "/prod/assets/images/mano_porque.png": "/prod/assets/images/mano_porque.png",
@@ -137,6 +157,18 @@
     "/final/assets/images/ILUS1.webp": "/final/assets/images/ILUS1.webp",
     "/final/assets/images/ILUS2.webp": "/final/assets/images/ILUS2.webp",
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
+    "/final/assets/images/accionistas.png": "/final/assets/images/accionistas.png",
+    "/final/assets/images/accionistas1.png": "/final/assets/images/accionistas1.png",
+    "/final/assets/images/accionistas2.png": "/final/assets/images/accionistas2.png",
+    "/final/assets/images/altag/Alejandra Osorio.png": "/final/assets/images/altag/Alejandra Osorio.png",
+    "/final/assets/images/altag/Diana Ramírez.png": "/final/assets/images/altag/Diana Ramírez.png",
+    "/final/assets/images/altag/Gustavo Farrera.png": "/final/assets/images/altag/Gustavo Farrera.png",
+    "/final/assets/images/altag/Johana Lizarazo.png": "/final/assets/images/altag/Johana Lizarazo.png",
+    "/final/assets/images/altag/Julián Jaramillo.png": "/final/assets/images/altag/Julián Jaramillo.png",
+    "/final/assets/images/altag/Liliana Ríos .png": "/final/assets/images/altag/Liliana Ríos .png",
+    "/final/assets/images/altag/Mauricio Hernández.png": "/final/assets/images/altag/Mauricio Hernández.png",
+    "/final/assets/images/altag/Patricia Restrepo .png": "/final/assets/images/altag/Patricia Restrepo .png",
+    "/final/assets/images/altag/Sebastián Mejía.png": "/final/assets/images/altag/Sebastián Mejía.png",
     "/final/assets/images/asu-favicon-alt.png": "/final/assets/images/asu-favicon-alt.png",
     "/final/assets/images/asulado_disc.png": "/final/assets/images/asulado_disc.png",
     "/final/assets/images/ayuda.webp": "/final/assets/images/ayuda.webp",
@@ -176,6 +208,14 @@
     "/final/assets/images/img_seguro.png": "/final/assets/images/img_seguro.png",
     "/final/assets/images/img_sp_auxilio.webp": "/final/assets/images/img_sp_auxilio.webp",
     "/final/assets/images/img_sp_incapacidad.webp": "/final/assets/images/img_sp_incapacidad.webp",
+    "/final/assets/images/junta/junta-andres.png": "/final/assets/images/junta/junta-andres.png",
+    "/final/assets/images/junta/junta-catalina.png": "/final/assets/images/junta/junta-catalina.png",
+    "/final/assets/images/junta/junta-sebastian.png": "/final/assets/images/junta/junta-sebastian.png",
+    "/final/assets/images/junta/junta-stella.png": "/final/assets/images/junta/junta-stella.png",
+    "/final/assets/images/junta/junta-tatiana.png": "/final/assets/images/junta/junta-tatiana.png",
+    "/final/assets/images/logo_col.png": "/final/assets/images/logo_col.png",
+    "/final/assets/images/logo_corner.png": "/final/assets/images/logo_corner.png",
+    "/final/assets/images/logo_sura.png": "/final/assets/images/logo_sura.png",
     "/final/assets/images/mano_paraque.png": "/final/assets/images/mano_paraque.png",
     "/final/assets/images/mano_paraque.webp": "/final/assets/images/mano_paraque.webp",
     "/final/assets/images/mano_porque.png": "/final/assets/images/mano_porque.png",
@@ -248,6 +288,18 @@
     "/qa/assets/images/ILUS1.webp": "/qa/assets/images/ILUS1.webp",
     "/qa/assets/images/ILUS2.webp": "/qa/assets/images/ILUS2.webp",
     "/qa/assets/images/ILUS3.webp": "/qa/assets/images/ILUS3.webp",
+    "/qa/assets/images/accionistas.png": "/qa/assets/images/accionistas.png",
+    "/qa/assets/images/accionistas1.png": "/qa/assets/images/accionistas1.png",
+    "/qa/assets/images/accionistas2.png": "/qa/assets/images/accionistas2.png",
+    "/qa/assets/images/altag/Alejandra Osorio.png": "/qa/assets/images/altag/Alejandra Osorio.png",
+    "/qa/assets/images/altag/Diana Ramírez.png": "/qa/assets/images/altag/Diana Ramírez.png",
+    "/qa/assets/images/altag/Gustavo Farrera.png": "/qa/assets/images/altag/Gustavo Farrera.png",
+    "/qa/assets/images/altag/Johana Lizarazo.png": "/qa/assets/images/altag/Johana Lizarazo.png",
+    "/qa/assets/images/altag/Julián Jaramillo.png": "/qa/assets/images/altag/Julián Jaramillo.png",
+    "/qa/assets/images/altag/Liliana Ríos .png": "/qa/assets/images/altag/Liliana Ríos .png",
+    "/qa/assets/images/altag/Mauricio Hernández.png": "/qa/assets/images/altag/Mauricio Hernández.png",
+    "/qa/assets/images/altag/Patricia Restrepo .png": "/qa/assets/images/altag/Patricia Restrepo .png",
+    "/qa/assets/images/altag/Sebastián Mejía.png": "/qa/assets/images/altag/Sebastián Mejía.png",
     "/qa/assets/images/asu-favicon-alt.png": "/qa/assets/images/asu-favicon-alt.png",
     "/qa/assets/images/asulado_disc.png": "/qa/assets/images/asulado_disc.png",
     "/qa/assets/images/ayuda.webp": "/qa/assets/images/ayuda.webp",
@@ -287,6 +339,14 @@
     "/qa/assets/images/img_seguro.png": "/qa/assets/images/img_seguro.png",
     "/qa/assets/images/img_sp_auxilio.webp": "/qa/assets/images/img_sp_auxilio.webp",
     "/qa/assets/images/img_sp_incapacidad.webp": "/qa/assets/images/img_sp_incapacidad.webp",
+    "/qa/assets/images/junta/junta-andres.png": "/qa/assets/images/junta/junta-andres.png",
+    "/qa/assets/images/junta/junta-catalina.png": "/qa/assets/images/junta/junta-catalina.png",
+    "/qa/assets/images/junta/junta-sebastian.png": "/qa/assets/images/junta/junta-sebastian.png",
+    "/qa/assets/images/junta/junta-stella.png": "/qa/assets/images/junta/junta-stella.png",
+    "/qa/assets/images/junta/junta-tatiana.png": "/qa/assets/images/junta/junta-tatiana.png",
+    "/qa/assets/images/logo_col.png": "/qa/assets/images/logo_col.png",
+    "/qa/assets/images/logo_corner.png": "/qa/assets/images/logo_corner.png",
+    "/qa/assets/images/logo_sura.png": "/qa/assets/images/logo_sura.png",
     "/qa/assets/images/mano_paraque.png": "/qa/assets/images/mano_paraque.png",
     "/qa/assets/images/mano_paraque.webp": "/qa/assets/images/mano_paraque.webp",
     "/qa/assets/images/mano_porque.png": "/qa/assets/images/mano_porque.png",
