--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@egjs/flicking-plugins": "^4.7.1",
     "@studio-freight/lenis": "^1.0.27",
     "alpinejs": "^3.13.1",
+    "chart.js": "^4.4.0",
     "del": "^7.1.0",
     "gsap": "npm:@gsap/simply@^3.12.2",
     "prettier": "^3.0.3",
